--- a/.gqlgen.yml
+++ b/.gqlgen.yml
@@ -1,5 +1,5 @@
 schema:
-  - backend/schema/*.graphql
+  - ./backend/schema/*.graphql
 exec:
   filename: backend/generated/exec_generated.go
   package: generated
